# IPK-Projekt-1

./: CMakeLists.txt  README.md  test.sh
include/: buffer.hpp  http.hpp  logger.hpp  pool.hpp  server.hpp  socket.hpp
src/: http.cpp  main.cpp  pool.cpp  server.cpp  socket.cpp
